# find-cxx-flags

./: CMakeLists.txt  README.md  find-cxx-flags.cpp
scripts/: ast
